# accumulative-matrix-sweeping

./: .gitignore  ACCEPTANCE_MATRIX.md  Cargo.toml  IMPLEMENTATION_SPEC.md  MANIFEST.sha256  README.md  build.sh  main.tex  pyproject.toml  references.bib
ci/: audit_glm4_precision.py  audit_glm52_precision.py  audit_glm52_source.py  convert_glm4_official_int4.py  convert_glm4_shard_slice.py  probe_glm4_quantization.py  verify.ps1  verify_glm4_official_layer.py  verify_glm4_official_layer_native.py  verify_glm4_official_model_native.py  verify_glm4_tokenizer.py
docs/: RECONSTRUCTION.md
docs/evidence/: glm47_complete_bf16_differential.json  glm47_int4_bringup_candidate.json  glm47_layer1_bf16_differential.json  glm47_precision_candidate.json  glm47_shard2_expert0_int4_conversion.json  glm47_shard2_expert_codec_comparison.json  glm47_shard2_quantization_probe.json  glm47_shard2_routed_expert_comparison.json  glm47_two_layer_native_differential.json  glm52_precision_candidate.json  glm52_source_audit.json
native/ams-core/: Cargo.toml
native/ams-core/src/: checked.rs  error.rs  full_attention.rs  gated_mlp.rs  glm.rs  glm4_decoder.rs  glm4_dense_layer.rs  glm4_generation.rs  glm4_mla.rs  glm4_model.rs  glm4_package.rs  glm4_sparse_layer.rs  identity.rs  int4.rs  kv_cache.rs  lib.rs  linear.rs  reader.rs  sparse_attention.rs  sparse_moe.rs  streamed_dsa.rs  ternary.rs
native/ams-runtime/: Cargo.toml
native/ams-runtime/src/: lib.rs  main.rs  owned.rs  worker_protocol.rs
schemas/: config.schema.json  glm4-layer-differential.schema.json  glm4-model-differential.schema.json  manifest.schema.json  plan.schema.json  trace.schema.json
sections/: 01_introduction.tex  02_scope_contract.tex  03_model.tex  04_theory.tex  05_linear_sweeping.tex  06_operator_catalog.tex  07_planning.tex  08_runtime.tex  09_compiler.tex  10_inference.tex  11_training.tex  12_multidevice.tex  13_numerics.tex  14_enterprise.tex  15_verification_evaluation.tex  16_related_work.tex  17_limitations.tex  18_conclusion.tex  A_proofs.tex  B_algorithms.tex  C_interfaces.tex  D_formats.tex  E_repository.tex  F_prototype_audit.tex
src/ams/: __init__.py  canonical.py  checked.py  conversion.py  descriptors.py  errors.py  int4_conversion.py  mixed_conversion.py  package.py  progressive_conversion.py  resources.py  ternary_conversion.py
tests/fault/: test_atomic_range_copy.py  test_conversion_journal.py  test_huggingface_shard_staging.py  test_int4_publication.py  test_progressive_conversion.py  test_ternary_publication.py
tests/integration/: test_glm4_expert_codec_evidence.py  test_glm4_int4_candidate_evidence.py  test_glm4_layer_differential.py  test_glm4_layer_differential_evidence.py  test_glm4_model_differential_evidence.py  test_glm4_moe_lite_contract.py  (+19 more)
(+45 files in other folders)
