[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ams-runtime"
version = "0.1.0.dev0"
description = "Bounded-residency reference runtime for Accumulative Matrix Sweeping"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AMS contributors" }]
dependencies = []

[project.optional-dependencies]
official-layer = [
  "safetensors==0.8.0",
  "torch==2.13.0",
  "transformers==5.12.0",
]
tokenizer = [
  "jinja2==3.1.6",
  "tokenizers==0.22.2",
]
test = [
  "jinja2==3.1.6",
  "jsonschema>=4.23",
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ams"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
