[package]
name = "ams-runtime"
version = "0.1.0-dev.0"
edition.workspace = true
rust-version.workspace = true
description = "Strict native package admission and execution wrapper for AMS"
publish = false

[dependencies]
ams-core = { path = "../ams-core" }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
sha2 = "=0.11.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
